@@ -18,8 +18,19 @@ package org.zirco.ui.activities;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.util.List;
 
+import javax.xml.parsers.DocumentBuilder;
+import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.parsers.ParserConfigurationException;
+
+import org.w3c.dom.Document;
+import org.w3c.dom.Element;
+import org.w3c.dom.Node;
+import org.w3c.dom.NodeList;
+import org.xml.sax.SAXException;
 import org.zirco.R;
 import org.zirco.model.BookmarksCursorAdapter;
 import org.zirco.model.DbAdapter;
@@ -44,6 +55,7 @@ import android.os.Handler;
 import android.os.Message;
 import android.preference.PreferenceManager;
 import android.provider.Browser.BookmarkColumns;
+import android.util.Log;
 import android.view.ContextMenu;
 import android.view.Menu;
 import android.view.MenuItem;
@@ -205,7 +217,7 @@ public class BookmarksListActivity extends ListActivity {
             return true;
             
         case MENU_IMPORT_BOOKMARKS:
-            importAndroidBookmarks();
+        	importBookmarks();
             return true;
             
         case MENU_EXPORT_BOOKMARKS:
@@ -305,14 +317,61 @@ public class BookmarksListActivity extends ListActivity {
     }
     
     /**
-     * Perform the android bookmarks import.
+     * Perform the bookmarks import.
      */
-    private void importAndroidBookmarks() {
+    private void importBookmarks() {
+    	
+    	List<String> exportedFiles = IOUtils.getExportedBookmarksFileList();
+    	
+    	final String[] choices = new String[exportedFiles.size() + 1];
+    	
+    	choices[0] = this.getResources().getString(R.string.BookmarksListActivity_AndroidImportSource);
+    	
+    	int i = 1;
+    	for (String fileName : exportedFiles) {
+    		choices[i] = fileName;
+    		i++;
+    	}
+    	
+    	AlertDialog.Builder builder = new AlertDialog.Builder(this);
+    	builder.setInverseBackgroundForced(true);
+    	builder.setIcon(android.R.drawable.ic_dialog_info);
+    	builder.setTitle(getResources().getString(R.string.BookmarksListActivity_ImportSource));
+    	builder.setSingleChoiceItems(choices,
+    			0,
+    			new OnClickListener() {
+			@Override
+			public void onClick(DialogInterface dialog, int which) {
+				
+				if (which == 0) {
+					doImportBookmarks(null);
+				} else {
+					doImportBookmarks(choices[which]);
+				}
+				
+				dialog.dismiss();				
+			}    		
+    	});    	
+    	
+    	AlertDialog alert = builder.create();
+    	alert.show();
+    	
+    }
+    
+    /**
+     * Perform the android bookmarks import.
+     * @param file The file to import. If null, will import Android bookmarks.
+     */
+    private void doImportBookmarks(String file) {
     	mProgressDialog = ProgressDialog.show(this,
     			this.getResources().getString(R.string.Commons_PleaseWait),
     			this.getResources().getString(R.string.BookmarksListActivity_ImportingBookmarks));
     	
-    	new AndroidImporter(this);
+    	if (file == null) {
+    		new AndroidImporter(this);
+    	} else {
+    		new XmlBookmarksImporter(this, file);
+    	}
     	
     }
     
@@ -408,6 +467,140 @@ public class BookmarksListActivity extends ListActivity {
     }
     
     /**
+     * Runnable for bookmarks import from xml.
+     */
+    private class XmlBookmarksImporter implements Runnable {
+
+    	private Context mContext;
+    	private String mFileName;
+    	
+    	/**
+    	 * Constructor.
+    	 * @param context The current context.
+    	 * @param fileName The file to import.
+    	 */
+    	public XmlBookmarksImporter(Context context, String fileName) {
+    		mContext = context;
+    		mFileName = fileName;
+    		
+    		new Thread(this).start();
+    	}
+    	
+    	/**
+    	 * Get the content of a node, why Android does not include Node.getTextContent() ?
+    	 * @param node The node.
+    	 * @return The node content.
+    	 */
+    	private String getNodeContent(Node node) {
+    		StringBuffer buffer = new StringBuffer();
+    		NodeList childList = node.getChildNodes();
+    		for (int i = 0; i < childList.getLength(); i++) {
+    		    Node child = childList.item(i);
+    		    if (child.getNodeType() != Node.TEXT_NODE) {
+    		        continue; // skip non-text nodes
+    		    }
+    		    buffer.append(child.getNodeValue());
+    		}
+
+    		return buffer.toString(); 
+    	}
+    	
+		@Override
+		public void run() {
+			
+			File file = new File(IOUtils.getBookmarksExportFolder(), mFileName);
+			
+			if ((file != null) &&
+					(file.exists()) &&
+					(file.canRead())) {
+				
+				try {
+					
+					DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();				
+					DocumentBuilder builder = factory.newDocumentBuilder();
+					
+					Document document = builder.parse(file);
+					
+					Element root = document.getDocumentElement();
+					
+					if ((root != null) &&
+							(root.getNodeName().equals("bookmarkslist"))) {
+						
+						NodeList bookmarksList = root.getElementsByTagName("bookmark");
+						
+						Node bookmark;
+						NodeList bookmarkItems;
+						String title;
+						String url;
+						String creationDate;
+						Node item;
+						
+						for (int i = 0; i < bookmarksList.getLength(); i++) {
+							
+							bookmark = bookmarksList.item(i);
+							
+							if (bookmark != null) {
+								
+								title = null;
+								url = null;
+								creationDate = null;
+								
+								bookmarkItems = bookmark.getChildNodes();
+								
+								for (int j = 0; j < bookmarkItems.getLength(); j++) {
+									
+									item = bookmarkItems.item(j);
+									
+									if ((item != null) &&
+											(item.getNodeName() != null)) {
+										if (item.getNodeName().equals("title")) {
+											title = getNodeContent(item);										
+										} else if (item.getNodeName().equals("url")) {
+											url = URLDecoder.decode(getNodeContent(item));
+										} else if (item.getNodeName().equals("creationdate")) {
+											creationDate = getNodeContent(item);
+										}
+									}
+									
+								}
+								
+								if ((creationDate == null) ||
+										(creationDate.length() == 0)) {
+									creationDate = DateUtils.getNow(mContext);
+								}
+								
+								mDbAdapter.addBookmark(title, url, creationDate);								
+							}
+							
+						}
+						
+					} else {
+						Log.i("Bookmark import", "Empty or invalid file.");
+					}
+					
+				} catch (ParserConfigurationException e) {
+					Log.w("Bookmark import failed", e.getMessage());
+				} catch (SAXException e) {
+					Log.w("Bookmark import failed", e.getMessage());
+				} catch (IOException e) {
+					Log.w("Bookmark import failed", e.getMessage());
+				}
+				
+			}
+			
+			handler.sendEmptyMessage(0);			
+		}
+		
+		private Handler handler = new Handler() {
+			public void handleMessage(Message msg) {
+				mProgressDialog.dismiss();
+				fillData();
+			}
+		};
+    	
+    }
+    
+    /**
      * Runnable for bookmarks export to xml.
      */
     private class XmlBookmarksExporter implements Runnable {
@@ -488,8 +681,7 @@ public class BookmarksListActivity extends ListActivity {
 					writer.close();
 					
 				} catch (IOException e1) {
-					// TODO Auto-generated catch block
-					e1.printStackTrace();
+					Log.w("Bookmark export failed", e1.getMessage());
 				}
 				
 				
