@@ -1,5 +1,6 @@
 0.2.9:
 - Pinch zoom;
+- Bookmark import/export from/to SD card.
 - Javascript prompt support;
 
 0.2.8:
